duniverse/menhirLib.20200211/test/static/bad/new-syntax-parentheses-bis.mly
%token A B C
%start<unit> main

%%

let b == B

let main :=
  A; (b | C)
     (* Error: a choice cannot be parenthesized like this. *)
